--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,39 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Drogon</title>
+
+	<style>
+		#m {
+			font-family: "Comic Sans MS", "Comic Sans", cursive;
+			font-size: 25px;
+			left: 40%;
+			top: 40%;
+			transform: translate(-50%, -50%);
+		}
+
+		.a {
+			position: absolute;
+		}
+
+		.zn {
+			z-index: -1;
+		}
+
+		div {
+			z-index: 2;
+		}
+	</style>
 </head>
 
 <body style="background-color: #009223">
-	<canvas id="b" style="position: absolute; z-index: 0"></canvas>
-	<canvas id="f" tabindex="0" style="position: absolute; z-index: 1"></canvas>
-	<script src="./app.js"></script>
+	<canvas id="b" class="a" style="z-index: 0"></canvas>
+	<canvas id="f" class="a" tabindex="0" style="z-index: 1"></canvas>
+	<div id="m" class="a zn">
+		<p></p>
+		<p></p>
+		<p></p>
+	</div>
+	<script src="./a.js"></script>
 </body>
 
 </html>
