--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 			position: absolute;
 		}
 
-		.zn {
-			z-index: -1;
+		.n {
+			display: none;
 		}
 
 		div {
@@ -33,7 +33,7 @@
 <body style="background-color: #009223">
 	<canvas id="b" class="a" style="z-index: 0"></canvas>
 	<canvas id="f" class="a" tabindex="0" style="z-index: 1"></canvas>
-	<div id="m" class="a zn">
+	<div id="m" class="a n">
 		<p></p>
 		<p></p>
 		<p></p>
