fixed some bugs and added improvements

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 	<div id="m" class="a n">
 		<p></p>
 		<p></p>
-		<p></p>
+		<p>Click to continue</p>
 	</div>
 	<script src="./a.js"></script>
 </body>
