--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,6 @@
 			transform: translate(-50%, -50%);
 		}
 
-		.a {
-			position: absolute;
-		}
-
 		.n {
 			display: none;
 		}
@@ -27,13 +23,17 @@
 		div {
 			z-index: 2;
 		}
+
+		div, canvas {
+			position: absolute;
+		}
 	</style>
 </head>
 
 <body style="background-color: #009223">
-	<canvas id="b" class="a" style="z-index: 0"></canvas>
-	<canvas id="f" class="a" tabindex="0" style="z-index: 1"></canvas>
-	<div id="m" class="a n">
+	<canvas id="b" style="z-index: 0"></canvas>
+	<canvas id="f" tabindex="0" style="z-index: 1"></canvas>
+	<div id="m" class="n">
 		<p></p>
 		<p></p>
 		<p>Click to continue</p>
